# Forrest_Upper_EtherCAT_Slave

./: .gitignore  CMakeLists.txt  Readme.md
inc/: FreeRTOSConfig.h
inc/logging/: Descriptors.h  VirtualSerial.h  logging.h
scripts/: build_debug.sh  build_release.sh  debug.sh  flash.sh
src/: main.cpp
src/logging/: Descriptors.c  VirtualSerial.c  logging.cpp
toolchain/: XMC4800x1024.ld  arm-xmc4500-toolchain.cmake  arm-xmc4800-toolchain.cmake
